Correcion efecto dropdown

--- a/tratamientos.html
+++ b/tratamientos.html
@@ -29,56 +29,104 @@
             </p>
         </div>
         <div class="tratamientos">
-        <div class="etiquetas">
-            <h3>
-                <b>Hidratación Profunda</b>
-            </h3>
-        </div>
-        <div class="etiquetas">
-            <h3>
-                <b>Nutritivo</b>
-            </h3>
-        </div>
-        <div class="etiquetas">
-            <h3>
-                <b>Piel Sensible</b>
-            </h3>
-        </div>
-        <div class="etiquetas">
-            <h3>
-                <b>Líneas de Expresión</b>
-            </h3>
-        </div>
-        <div class="etiquetas">
-            <h3>
-                <b>Despigmentante</b>
-            </h3>
-        </div>
-        <div class="etiquetas">
-            <h3>
-                <b>Piel grasa</b>
-            </h3>
-        </div>
-        <div class="etiquetas">
+        <!-- Card Begin -->
+        <div class="">
             <button type="button" class="collapsible">
-            <h3>
-                <b>Cupping</b>
-            </h3>
-        </div>
+                <h3>
+                    <b>Hidratación Profunda</b>
+                </h3>
             </button>
             <div class="content">
-            <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión</p>
+                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión</p>
             </div>
-        <div class="etiquetas">
-            <h3>
-                <b>Maderoterapia</b>
-            </h3>
         </div>
-        <div class="etiquetas">
-            <h3>
-                <b>Hieloterapia</b>
-            </h3>
+        <!-- Card Begin -->
+        <div class="">
+            <button type="button" class="collapsible">
+                <h3>
+                    <b>Nutritivo</b>
+                </h3>
+            </button>
+            <div class="content">
+                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión</p>
+            </div>
         </div>
+        <!-- Card Begin -->
+        <div class="">
+            <button type="button" class="collapsible">
+                <h3>
+                    <b>Piel Sensible</b>
+                </h3>
+            </button>
+            <div class="content">
+                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión</p>
+            </div>
+        </div>
+        <!-- Card Begin -->
+        <div class="">
+            <button type="button" class="collapsible">
+                <h3>
+                    <b>Líneas de Expresión</b>
+                </h3>
+            </button>
+            <div class="content">
+                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión</p>
+            </div>
+        </div>
+        <!-- Card Begin -->
+        <div class="">
+            <button type="button" class="collapsible">
+                <h3>
+                    <b>Despigmentante</b>
+                </h3>
+            </button>
+            <div class="content">
+                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión</p>
+            </div>
+        </div>
+        <!-- Card Begin -->
+        <div class="">
+            <button type="button" class="collapsible">
+                <h3>
+                    <b>Piel grasa</b>
+                </h3>
+            </button>
+            <div class="content">
+                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión</p>
+            </div>
+        </div>
+        <!-- Card Begin -->
+        <div class="">
+            <button type="button" class="collapsible">
+                <h3>
+                    <b>Cupping</b>
+                </h3>
+            </button>
+            <div class="content">
+                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión</p>
+            </div>
+        </div>
+        <!-- Card Begin -->
+        <div class="">
+            <button type="button" class="collapsible">
+                <h3>
+                    <b>Maderoterapia</b>
+                </h3>
+            </button>
+            <div class="content">
+                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión</p>
+            </div>
+        </div>
+        <!-- Card Begin -->
+        <div class="">
+            <button type="button" class="collapsible">
+                <h3>
+                    <b>Hieloterapia</b>
+                </h3>
+            </button>
+            <div class="content">
+                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión</p>
+            </div>
         </div>
     </section>
     <footer class="footer">
@@ -87,6 +135,6 @@
             <img src="./IMG/Copia de icono-de-telefono-png-10-free-cliparts-download-images-on-icono-telefono-png-512_512.png" alt="" style="width: 40px;height: 40px;">
         </div>
     </footer>
-    <script src="./JS/tratamientos.js"></script>
+    <script src="./scripts/tratamientos.js"></script>
 </body>
 </html>
