--- a/aparatologia.html
+++ b/aparatologia.html
@@ -23,54 +23,96 @@
         <div></div>
     </header>
     <section>
+        <div class="generales">
+            <p>
+                El uso de estos aparatos se realizará con previa evalución de nuestro personal.
+            </p>
+        </div>
         <div class="tratamientos">
-        <div class="etiquetas">
-            <h3>
-                <b>Dermapen</b>
-            </h3>
-        </div>
-        <div class="etiquetas">
-            <h3>
-                <b>Skin scrubber</b>
-            </h3>
-        </div>
-        <div class="etiquetas">
-            <h3>
-                <b>Alta frecuencia</b>
-            </h3>
-        </div>
-        <div class="etiquetas">
-            <h3>
-                <b>Mesoterapia</b>
-            </h3>
-        </div>
-        <div class="etiquetas">
-            <h3>
-                <b>Hi fu</b>
-            </h3>
-        </div>
-        <div class="etiquetas">
-            <h3>
-                <b>Piel grasa</b>
-            </h3>
-        </div>
-        <div class="etiquetas">
-            <h3>
-                <b>Corriente galvanica</b>
-            </h3>
-        </div>
-        <div class="etiquetas">
-            <h3>
-                <b>Bem therapy</b>
-            </h3>
-        </div>
-        </div>
+            <!-- Card Begin -->
+            <div class="">
+                <button type="button" class="collapsible">
+                    <h3>
+                        <b>Demapen</b>
+                    </h3>
+                </button>
+                <div class="content">
+                    <p>Este aparato nos ayuda con la eliminación arrugas, mejora el aspecto de cicatrices, fomenta la creación de colágeno y elástina, beneficia la penetracion profunda de activos como el ácido hialurónico, disminuye el tamaño de los poros, entre otros beneficios.</p>
+                </div>
+            </div>
+            <!-- Card Begin -->
+            <div class="">
+                <button type="button" class="collapsible">
+                    <h3>
+                        <b>Skin scrubber</b>
+                    </h3>
+                </button>
+                <div class="content">
+                    <p>Realiza limpieza y regeneración profunda de la piel, elimina arrugas, da un micro masaje circulatorio, piel más suave y uniforme, activación celular y su metabolismo.</p>
+                </div>
+            </div>
+            <!-- Card Begin -->
+            <div class="">
+                <button type="button" class="collapsible">
+                    <h3>
+                        <b>Alta frecuencia</b>
+                    </h3>
+                </button>
+                <div class="content">
+                    <p>La alta frecuencia tiene efectos desinfectantes, descongestivos, antiinflamatorios y estimulantes de los tejidos. Es esencial en limpieza de cutis y otros tratamientos anti – acné, ya que baja la inflamación y las rojeces, al mismo tiempo que tiene una acción bactericida.</p>
+                </div>
+            </div>
+            <!-- Card Begin -->
+            <div class="">
+                <button type="button" class="collapsible">
+                    <h3>
+                        <b>Mesoterapia virtual o radiofrecuencia</b>
+                    </h3>
+                </button>
+                <div class="content">
+                    <p>Ayuda a mantener el tono muscular, crea colágeno, mejora la circulación sanguínea y linfática y reduce las arrugas.</p>
+                </div>
+            </div>
+            <!-- Card Begin -->
+            <div class="">
+                <button type="button" class="collapsible">
+                    <h3>
+                        <b>Hi fu</b>
+                    </h3>
+                </button>
+                <div class="content">
+                    <p> Mejora de manera considerable la apariencia de la piel de nuestro organismo, logrando conseguir resultados magníficos, tales como una piel tersa, lozana y brillante.</p>
+                </div>
+            </div>
+            <!-- Card Begin -->
+            <div class="">
+                <button type="button" class="collapsible">
+                    <h3>
+                        <b>Corriente galvanica</b>
+                    </h3>
+                </button>
+                <div class="content">
+                    <p>Combate los signos visibles del envejecimiento de la piel desde la raíz con nuestros ingredientes ageLOC y ayuda a que la piel cansada y estresada tenga un aspecto más joven y revitalizado.</p>
+                </div>
+            </div>
+            <!-- Card Begin -->
+            <div class="">
+                <button type="button" class="collapsible">
+                    <h3>
+                        <b>Bem therapy</b>
+                    </h3>
+                </button>
+                <div class="content">
+                    <p> Este procedimiento realiza un incremento del riego sanguíneo y de la tensión de oxígeno, disminución del ácido carbónico, disminución del grado de acidosis tisular, incremento de los líquidos circulantes, activación linfática y da equilibrio de la membrana celular.</p>
+                </div>
+            </div>
     </section>
     <footer class="footer">
         <div class="rs">
             <img src="./IMG/Copia de 1200px-Facebook_f_logo_(2019).svg.png" alt="" style="width: 40px;height: 40px;">
             <img src="./IMG/Copia de icono-de-telefono-png-10-free-cliparts-download-images-on-icono-telefono-png-512_512.png" alt="" style="width: 40px;height: 40px;">
         </div>
-    </footer>    
+    </footer>
+    <script src="./scripts/aparatologia.js"></script>
 </body>
 </html>
