--- a/estetica-facial.html
+++ b/estetica-facial.html
@@ -23,6 +23,11 @@
         <div></div>
     </header>
     <section>
+        <div class="generales">
+            <p>
+               Todos tratamientes requieren evaluación previa de nuestro personal.
+            </p>
+        </div>
         <div class="tratamientos">
         <div class="etiquetas">
             <h3>
