--- a/tratamientos.html
+++ b/tratamientos.html
@@ -70,7 +70,7 @@
                 </h3>
             </button>
             <div class="content">
-                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión</p>
+                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión.</p>
             </div>
         </div>
         <!-- Card Begin -->
@@ -103,7 +103,7 @@
                 </h3>
             </button>
             <div class="content">
-                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión</p>
+                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión.</p>
             </div>
         </div>
         <!-- Card Begin -->
@@ -114,7 +114,7 @@
                 </h3>
             </button>
             <div class="content">
-                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión</p>
+                <p>Masaje realizado con instrumentos de madera, los cuales crean un efecto lifting, mejora circulación,  elimina toxina y mejora el aspecto de la piel. </p>
             </div>
         </div>
         <!-- Card Begin -->
@@ -125,7 +125,7 @@
                 </h3>
             </button>
             <div class="content">
-                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión</p>
+                <p>Esta técnica ayuda a tonificar la piel, evitar la aparición de líneas d expresión, desinflama y previene la apareción del acné.</p>
             </div>
         </div>
     </section>
