--- a/tratamientos.html
+++ b/tratamientos.html
@@ -37,7 +37,7 @@
                 </h3>
             </button>
             <div class="content">
-                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión</p>
+                <p></p>
             </div>
         </div>
         <!-- Card Begin -->
@@ -48,7 +48,7 @@
                 </h3>
             </button>
             <div class="content">
-                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión</p>
+                <p></p>
             </div>
         </div>
         <!-- Card Begin -->
@@ -59,7 +59,7 @@
                 </h3>
             </button>
             <div class="content">
-                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión</p>
+                <p></p>
             </div>
         </div>
         <!-- Card Begin -->
@@ -70,7 +70,7 @@
                 </h3>
             </button>
             <div class="content">
-                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión.</p>
+                <p></p>
             </div>
         </div>
         <!-- Card Begin -->
@@ -81,7 +81,7 @@
                 </h3>
             </button>
             <div class="content">
-                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión</p>
+                <p></p>
             </div>
         </div>
         <!-- Card Begin -->
@@ -92,7 +92,7 @@
                 </h3>
             </button>
             <div class="content">
-                <p>Cupping o ventosas es utilizada para eliminar toxinas, realiza drenaje linfático, ayuda a la circulación de la piel, oxigenación y suaviza líneas de expresión</p>
+                <p></p>
             </div>
         </div>
         <!-- Card Begin -->
@@ -131,8 +131,12 @@
     </section>
     <footer class="footer">
         <div class="rs">
+            <a href="https://www.facebook.com/skincareair/">
             <img src="./IMG/Copia de 1200px-Facebook_f_logo_(2019).svg.png" alt="" style="width: 40px;height: 40px;">
+            </a>
+            <a href="5516840428">
             <img src="./IMG/Copia de icono-de-telefono-png-10-free-cliparts-download-images-on-icono-telefono-png-512_512.png" alt="" style="width: 40px;height: 40px;">
+            </a>
         </div>
     </footer>
     <script src="./scripts/tratamientos.js"></script>
