--- a/conocenos.html
+++ b/conocenos.html
@@ -24,7 +24,7 @@
     </header>
     <div class="info">
         <p>
-            <b>AIRSKIN CARE</b> somos un equipo conformado por expertas en cuidados de la piel y
+            <b>AIRSKIN CARE</b> somos un equipo conformado por expertas en cuidados de la piel que cuentan con más de 6 años de experiecia en el tratamiento de la piel. Contamos con el equipo especializado para relizar los procedimientos que te ayudarán a mejorar y cuidar de ella; así como a prevenir arrugas, acné, entre otros muchos beneficios. 
         </p>
     </div>
     <div>
