--- a/estetica-facial.html
+++ b/estetica-facial.html
@@ -73,7 +73,9 @@
     </section>
     <footer class="footer">
         <div class="rs">
+            <a href="https://www.facebook.com/skincareair/">
             <img src="./IMG/Copia de 1200px-Facebook_f_logo_(2019).svg.png" alt="" style="width: 40px;height: 40px;">
+            </a>
             <img src="./IMG/Copia de icono-de-telefono-png-10-free-cliparts-download-images-on-icono-telefono-png-512_512.png" alt="" style="width: 40px;height: 40px;">
         </div>
     </footer>
