--- a/estetica-facial.html
+++ b/estetica-facial.html
@@ -12,7 +12,13 @@
         <a href="./index.html">
             <img src="./IMG/WhatsApp Image 2021-02-11 at 5.42.11 PM.jpeg" alt="" style= "width: 180px; height: 180px;"> 
         </a>
-         </div> 
+         </div>
+          <!--logo mobile-->
+        <div class="logo-mobile">
+            <a href="./index.html">
+                <img src="./IMG/WhatsApp Image 2021-02-11 at 5.42.11 PM.jpeg" alt="" style= "width: 100px; height: 100px;"> 
+            </a>
+        </div> 
          <div class="titulo">     
         <h1>
             <b>ESTÉTICA FACIAL</b>
@@ -20,7 +26,10 @@
         </div>
         <div>  
         </div>
-        <div></div>
+        <div>
+        </div>
+        <div>
+        </div>
     </header>
     <section>
         <div class="generales">
