--- a/aparatologia.html
+++ b/aparatologia.html
@@ -123,7 +123,9 @@
             <a href="https://www.facebook.com/skincareair/">
             <img src="./IMG/Copia de 1200px-Facebook_f_logo_(2019).svg.png" alt="" style="width: 40px;height: 40px;">
             </a>
-            <img src="./IMG/Copia de icono-de-telefono-png-10-free-cliparts-download-images-on-icono-telefono-png-512_512.png" alt="" style="width: 40px;height: 40px;">
+            <a href="tel: 5516840428">
+                <img src="./IMG/Copia de icono-de-telefono-png-10-free-cliparts-download-images-on-icono-telefono-png-512_512.png" alt="" style="width: 40px;height: 40px;">
+            </a>
         </div>
     </footer>
     <script src="./scripts/aparatologia.js"></script>
