--- a/tratamientos.html
+++ b/tratamientos.html
@@ -38,71 +38,35 @@
             </p>
         </div>
         <div class="tratamientos">
-        <!-- Card Begin -->
-        <div class="">
-            <button type="button" class="collapsible">
+        <div class="etiquetas">
                 <h3>
                     <b>Hidratación Profunda</b>
                 </h3>
-            </button>
-            <div class="content">
-                <p></p>
-            </div>
         </div>
-        <!-- Card Begin -->
-        <div class="">
-            <button type="button" class="collapsible">
+        <div class="etiquetas">
                 <h3>
                     <b>Nutritivo</b>
                 </h3>
-            </button>
-            <div class="content">
-                <p></p>
-            </div>
         </div>
-        <!-- Card Begin -->
-        <div class="">
-            <button type="button" class="collapsible">
+        <div class="etiquetas">
                 <h3>
                     <b>Piel Sensible</b>
                 </h3>
-            </button>
-            <div class="content">
-                <p></p>
-            </div>
         </div>
-        <!-- Card Begin -->
-        <div class="">
-            <button type="button" class="collapsible">
+        <div class="etiquetas">
                 <h3>
                     <b>Líneas de Expresión</b>
                 </h3>
-            </button>
-            <div class="content">
-                <p></p>
-            </div>
         </div>
-        <!-- Card Begin -->
-        <div class="">
-            <button type="button" class="collapsible">
+        <div class="etiquetas">
                 <h3>
                     <b>Despigmentante</b>
                 </h3>
-            </button>
-            <div class="content">
-                <p></p>
-            </div>
         </div>
-        <!-- Card Begin -->
-        <div class="">
-            <button type="button" class="collapsible">
+        <div class="etiquetas">
                 <h3>
                     <b>Piel grasa</b>
                 </h3>
-            </button>
-            <div class="content">
-                <p></p>
-            </div>
         </div>
         <!-- Card Begin -->
         <div class="">
