--- a/contacto.html
+++ b/contacto.html
@@ -13,6 +13,12 @@
             <img src="./IMG/WhatsApp Image 2021-02-11 at 5.42.11 PM.jpeg" alt="" style= "width: 180px; height: 180px;"> 
         </a>
          </div> 
+           <!--logo mobile-->
+        <div class="logo-mobile">
+            <a href="./index.html">
+                <img src="./IMG/WhatsApp Image 2021-02-11 at 5.42.11 PM.jpeg" alt="" style= "width: 100px; height: 100px;"> 
+            </a>
+        </div> 
          <div class="titulo">     
         <h1>
             <b>CONTACTO</b>
@@ -20,16 +26,24 @@
         </div>
         <div>  
         </div>
-        <div></div>
+        <div>
+        </div>
     </header>
     <section>
-        <div>
-            <p>
-                Puedes agendar tu cita al telefono
-            </p>
-            <img src="./IMG/Copia de icono-de-telefono-png-10-free-cliparts-download-images-on-icono-telefono-png-512_512.png" alt="" style="width: 40px;height: 40px;">
+        <div class="contacto">
+            <p>Pide informes o haz tu cita al número</p>
+            <a href="tel:5516840428">
+                <img src="./IMG/Copia de icono-de-telefono-png-10-free-cliparts-download-images-on-icono-telefono-png-512_512.png" alt="" style="width: 40px;height: 40px;">
+            </a>
             <b>5516840428</b>
+            <p> Visita nuestra página de facebook </p>
+            <a href="https://www.facebook.com/skincareair/">
+                <img src="./IMG/Copia de 1200px-Facebook_f_logo_(2019).svg.png" alt="" style="width: 40px;height: 40px;">
+            </a>
+            <b>skincareair</b>
         </div>
     </section>
+        <div id="map"></div>
+    <script src="./scripts/contacto.js"></script>
 </body>
 </html>
