--- a/index.html
+++ b/index.html
@@ -12,22 +12,32 @@
             <img src="./IMG/WhatsApp Image 2021-02-11 at 5.42.11 PM.jpeg" alt="">
         </div>
     </header>
-    <nav class="nav">
-        <h3>
-            <a href="./conocenos.html">CONÓCENOS</a>
-        </h3>
-        <h3>
-            <a href="./tratamientos.html">TRATAMIENTOS FACIALES</a>
-        </h3>
-        <h3>
-            <a href="./aparatologia.html">APARATOLOGÍA</a>
-        </h3>
-        <h3>
-            <a href="./estetica-facial.html">ESTÉTICA FACIAL</a>
-        </h3>
-        <h3>
-            <a href="./contacto.html">CONTACTO</a>
-        </h3>
+    <nav class="nav"> 
+        <div class="titulos">
+            <a href="./conocenos.html">
+                <h3>CONÓCENOS</h3>
+            </a>
+        </div>
+        <div class="titulos">
+            <a href="./tratamientos.html">
+                <h3>TRATAMIENTOS FACIALES</h3>
+            </a>
+        </div>
+        <div class="titulos">
+            <a href="./aparatologia.html">
+                <h3>APARATOLOGÍA</h3>
+            </a>
+        </div>
+        <div class="titulos">
+            <a href="./estetica-facial.html">
+                <h3>ESTÉTICA FACIAL</h3>
+            </a>
+        </div>
+        <div class="titulos">
+            <a href="./contacto.html">
+                <h3>CONTACTO</h3>
+            </a>
+        </div>
     </nav>
 <script src="./JS/main.js"></script>
 </body>
