--- a/conocenos.html
+++ b/conocenos.html
@@ -13,6 +13,12 @@
             <img src="./IMG/WhatsApp Image 2021-02-11 at 5.42.11 PM.jpeg" alt="" style= "width: 180px; height: 180px;"> 
         </a>
          </div> 
+          <!--logo mobile-->
+        <div class="logo-mobile">
+            <a href="./index.html">
+                <img src="./IMG/WhatsApp Image 2021-02-11 at 5.42.11 PM.jpeg" alt="" style= "width: 100px; height: 100px;"> 
+            </a>
+        </div>
          <div class="titulo">     
         <h1>
             <b>CONÓCENOS</b>
