--- a/contacto.html
+++ b/contacto.html
@@ -29,21 +29,30 @@
         <div>
         </div>
     </header>
-    <section>
+    <section class="map-tel-fb">
         <div class="contacto">
+            <div>
             <p>Pide informes o haz tu cita al número</p>
             <a href="tel:5516840428">
                 <img src="./IMG/Copia de icono-de-telefono-png-10-free-cliparts-download-images-on-icono-telefono-png-512_512.png" alt="" style="width: 40px;height: 40px;">
             </a>
             <b>5516840428</b>
+            </div>
+            <div>
             <p> Visita nuestra página de facebook </p>
             <a href="https://www.facebook.com/skincareair/">
                 <img src="./IMG/Copia de 1200px-Facebook_f_logo_(2019).svg.png" alt="" style="width: 40px;height: 40px;">
             </a>
             <b>skincareair</b>
+            </div>
+        </div>
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7529.081095028874!2d-99.15438147631387!3d19.345733497734535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ffd397dd5569%3A0x43e8e367c34200e!2sParque%20San%20Andr%C3%A9s%2C%20Ciudad%20de%20M%C3%A9xico%2C%20CDMX!5e0!3m2!1ses!2smx!4v1614358212296!5m2!1ses!2smx" width="450" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+        <!--mobile-map-->
+        <div class="map-mobile">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7529.081095028874!2d-99.15438147631387!3d19.345733497734535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ffd397dd5569%3A0x43e8e367c34200e!2sParque%20San%20Andr%C3%A9s%2C%20Ciudad%20de%20M%C3%A9xico%2C%20CDMX!5e0!3m2!1ses!2smx!4v1614358212296!5m2!1ses!2smx" width="200" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </section>
-        <div id="map"></div>
-    <script src="./scripts/contacto.js"></script>
 </body>
 </html>
